# MCA

./: .env  KaggleLLM.ipynb  Kaggle_Notebook.ipynb  README.md  build_notebook.py  extract_all_images.py  generate_chapter_content.py  main.py  pyproject.toml  splitter.py  verify_chapter_content.py
data/processed/chapter_content/ANALYTICAL_SKILLS-I/: Unit_01_Number_System.md  Unit_01_Number_System.md.bak  Unit_02_Average.md  Unit_02_Average.md.bak  Unit_03_Mathematical_Operations.md  Unit_03_Mathematical_Operations.md.bak  Unit_04_Percentage.md  Unit_04_Percentage.md.bak  Unit_05_Profit_and_Loss.md  (+19 more)
data/raw/: ECAP437.docx  ECAP444.docx  ECAP446.docx  ECAP448.docx  ECAP453.docx
src/: __init__.py
src/agents/: __init__.py  examiner_agent.py  study_agent.py
src/core/: __init__.py  config.py  database.py  exam_template_parser.py  models.py  prompt_manager.py  schemas.py
src/prompts/: chapter_cleanup.txt  chapter_content_summary.txt  examiner_exam_gen.txt  examiner_pass_1.txt  examiner_pass_2.txt  study_guide.txt  study_system.txt  subject_manager_toc.txt
src/rag/: __init__.py  docx_parser.py  indexer.py  retriever.py
src/reporting/: __init__.py  report_builder.py
src/services/: analytics_service.py  exam_service.py  practice_service.py  progress_service.py  study_service.py  template_service.py
src/ui/: __init__.py  analytics_view.py  dashboard.py  infinite_practice_view.py  main_window.py  settings_dialog.py  study_view.py  subject_manager.py  test_view.py  theme.py  workers.py
src/ui/components/: ai_tutor.py  custom_card.py  flow_layout.py
(+41 files in other folders)
